feat: populate service categories in services & refactor swagger
